--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@types/passport-jwt": "^4.0.1",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "mongoose": "^8.19.2",
