--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/passport-jwt": "^4.0.1",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
+    "joi": "^18.0.1",
     "mongoose": "^8.19.2",
     "nestjs-pino": "^4.4.1",
     "nestjs-zod": "^5.0.1",
