--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/websockets": "^11.1.8",
     "@types/passport-jwt": "^4.0.1",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
@@ -37,6 +38,7 @@
     "pino-pretty": "^13.1.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
